Add --add-opens for jdk.internal.misc to generated zilla launcher
Agrona 2.x uses jdk.internal.misc.Unsafe internally, which requires
--add-opens java.base/jdk.internal.misc=ALL-UNNAMED at JVM startup.
ZpmInstall.generateLauncher() now injects this flag via JAVA_OPTIONS
in the generated zilla shell script.

https://claude.ai/code/session_01TtqsqngTyooKccwki6rLzo